шаблоны для повторяющейся информации

--- a/Sunduk.PWA/Components/Knowledge/GeneralPrograming.razor
+++ b/Sunduk.PWA/Components/Knowledge/GeneralPrograming.razor
@@ -147,8 +147,7 @@
 
 <MudMessageBox @ref="gCodeMbox" Title="Язык G-кодов">
     <MessageContent>
-        G-код — наиболее распространенный и широко используемый язык программирования устройств с ЧПУ, также известный как ИСО 7-бит. 
-        Производители систем ЧПУ используют G-код в качестве базового языка программирования, дополнительно расширяя его по своему усмотрению.
+        @KnowlegdeInfo.ISO_LANGUAGE
     </MessageContent>
 </MudMessageBox>
 
@@ -169,7 +168,7 @@
 
 <MudMessageBox @ref="interpolationMbox" Title="Интерполяция">
     <MessageContent>
-        В данном контексте интерполяция обозначает движение инструмента по прямой линии или дуге.
+        @KnowlegdeInfo.INTERPOLATION
     </MessageContent>
 </MudMessageBox>
 
