--- a/Sunduk.PWA/Components/Knowledge/ProgrammingG00.razor
+++ b/Sunduk.PWA/Components/Knowledge/ProgrammingG00.razor
@@ -27,12 +27,12 @@
 
 <MudMessageBox @ref="absMbox" Title="Абсолютное перемещение">
     <MessageContent>
-        При программировании в абсолютных значениях указываются координаты относительно центра системы координат заготовки.
+        @KnowlegdeInfo.ABOLUTE_PROGRAMMING
     </MessageContent>
 </MudMessageBox>
 <MudMessageBox @ref="incMbox" Title="Относительное перемещение">
     <MessageContent>
-        При программировании в относительных/инкрементных значениях указываются координаты относительно текущего положения инструмента.
+        @KnowlegdeInfo.INCREMENT_PROGRAMMING
     </MessageContent>
 </MudMessageBox>
 
