--- a/Sunduk.PWA/Components/Knowledge/ProgrammingG01.razor
+++ b/Sunduk.PWA/Components/Knowledge/ProgrammingG01.razor
@@ -22,7 +22,7 @@
         <tbody>
             <tr>
                 <td class=ex>G01 X_ F_;</td>
-                <td class=desc>lвижение инструмента на подаче F_ до координаты X_</td>
+                <td class=desc>движение инструмента на подаче F_ до координаты X_</td>
             </tr>
         </tbody>
     </table>
@@ -36,12 +36,12 @@
 
 <MudMessageBox @ref="absMbox" Title="Абсолютное перемещение">
     <MessageContent>
-        При программировании в абсолютных значениях указываются координаты относительно центра системы координат заготовки.
+        @KnowlegdeInfo.ABOLUTE_PROGRAMMING
     </MessageContent>
 </MudMessageBox>
 <MudMessageBox @ref="incMbox" Title="Относительное перемещение">
     <MessageContent>
-        При программировании в относительных/инкрементных значениях указываются координаты относительно текущего положения инструмента.
+        @KnowlegdeInfo.INCREMENT_PROGRAMMING
     </MessageContent>
 </MudMessageBox>
 @code 
