вернул .нет5, разнес таблицу инструмента и создание переходов по компонентам, добавил типы станков, внес фрезерный станок, пока без шаблонов

--- a/Sunduk.PWA/_Imports.razor
+++ b/Sunduk.PWA/_Imports.razor
@@ -19,5 +19,6 @@
 @using Sunduk.PWA.Infrastructure.Templates
 @using Sunduk.PWA.Infrastructure.Sequences
 @using Sunduk.PWA.Infrastructure.Tools
+@using Sunduk.PWA.Infrastructure.CAM
 @using MudBlazor
 @using BlazorDownloadFile
