--- a/Sunduk.PWA/_Imports.razor
+++ b/Sunduk.PWA/_Imports.razor
@@ -19,6 +19,9 @@
 @using Sunduk.PWA.Infrastructure.Templates
 @using Sunduk.PWA.Infrastructure.Sequences
 @using Sunduk.PWA.Infrastructure.Tools
+@using Sunduk.PWA.Infrastructure.Tools.Base
+@using Sunduk.PWA.Infrastructure.Tools.Turning
+@using Sunduk.PWA.Infrastructure.Tools.Milling
 @using Sunduk.PWA.Infrastructure.CAM
 @using MudBlazor
 @using BlazorDownloadFile
